--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
     </div>
     <div class="col-minimapa">
       <div class="row minimapa mt-3">
-        <div class="canvas_container mt-3 ms-3">
+        <div id="canvasContainer" name="canvasContainer" class="canvas_container mt-3 ms-3">
           <canvas id="canvasMap" name="canvasMap" #canvasMap class="canvas_up"></canvas>
           <canvas id="canvasHead" name="canvasHead" #canvasHead class="canvas_head"></canvas>
           <canvas id="canvasViewport" name="canvasViewport" #canvasViewport class="canvas_down"></canvas>
