Eliminado el campo equipo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
       </div>
       <div class="col-6">
         <div class="team-block " *ngIf="teamSet">
-          <span>Jugador: {{this.player.name}} ( {{this.player.team}} )</span>
+          <span>Jugador: {{this.player.name}}</span>
         </div>
       </div>
     </div>
