--- a/src/app/newgame/newgame.component.html
+++ b/src/app/newgame/newgame.component.html
@@ -31,14 +31,10 @@
   </ol>
 
   <h3>Datos</h3>
-  <mat-form-field>
-    <mat-label>Equipo</mat-label>
-    <input type="text" matInput placeholder="¿Cual es el número de tu equipo?" cdkFocusInitial formControlName="team">
-  </mat-form-field>
 
   <mat-form-field>
     <mat-label>Nombre</mat-label>
-    <input type="text"  matInput placeholder="¿Cuál es tu nombre?" formControlName="name">
+    <input type="text"  matInput placeholder="¿Cuál es tu nombre?" cdkFocusInitial formControlName="name">
   </mat-form-field>
 
   <mat-form-field>
