--- a/src/app/newgame/newgame.component.html
+++ b/src/app/newgame/newgame.component.html
@@ -1,6 +1,6 @@
-<h2 mat-dialog-title>Nuevo Juego</h2>
+<h2 mat-dialog-title>Bienvenido al real de la feria EUIGS 2021!!!</h2>
 <mat-dialog-content class="mat-typography" [formGroup]="form">
-  <h3>Reglas</h3>
+  <h3>Reglas del juego</h3>
   
   <ol>
     <li>El juego consiste en recoger farolillos por la feria y entregarlos en la Portada.</li>
@@ -8,14 +8,25 @@
     <li>Se tienen que recoger al menos {{numMinimo}} farolillos antes de ir a la Portada a entregarlos.</li>
     <li>Si se acude a la Portada con menos de {{numMinimo}} farolillos, se pierden todos los recogidos hasta ese
     momento.</li>    
-    <li *ngIf="penalizacion > 0">Si durante la recogida se produce un choque con algún obstáculo móvil o con tu
+    <li *ngIf="penalizacion > 0">Si durante la recogida se produce un choque con algún enemigo o con tu
       propia cola de farolillos, se pierden todos los recogidos hasta ese momento y se descuentan {{penalizacion}} segundos del tiempo
       restante.
     </li>
     <li>Una vez se cumpla el tiempo, la puntuación viene determinada por el número de farolillos entregados.</li>
   </ol>
   
+  <h3>Movimientos</h3>
+  <ol>
+    <li>La gitana se mueve sola por el real, a no ser que se choque con el límite, o con una caseta.</li>
+    <li>La gitana entrará al real por la portada, direccion norte, pero puedes cambiar la dirección del movimiento con los cursores.</li>
+    <li>Pero no trates de hacer cosas raras: Si la gitana va hacia la derecha, no puedes virar en seco e ir hacia la izquierda: debes girar en angulos de 90º.</li>
+  </ol>
 
+  <h3>Enemigos</h3>
+  <ol>
+    <li>Los compadres y los jinetes se mueven por el real sin esquivarte. Ten cuidado no te choques!!.</li>
+    <li>Si alguno de ellos se choca contigo, perderás los farolillos que lleves en la cola, pero lo mandaras a casa y ya no te molestará mas.</li>
+  </ol>
 
   <h3>Turnos</h3>
   <ol>
