--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,8 +18,7 @@
       <div class="col-6">
         <div class="score-block text-end ">
           <span class="score" *ngIf="teamSet">Jugador: {{this.player.name}}</span><br>
-          <span class="score" [ngClass]="{'new-best-score': newBestScore}">Recogidas: {{score}}</span><br>
-          <span class="score"> Entregadas: {{currentBulbs}} </span><br>
+          <span class="score"> Puntuación: {{currentBulbs}} </span><br>
           <span class="time">Tiempo: {{time}} s</span>
         </div>
       </div>
