Parametro LOSE_IF_LESS para perder o no perder farolillos si llegas a la portada con menos del minimo

--- a/src/app/gameover/gameover.component.html
+++ b/src/app/gameover/gameover.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Se acabó el tiempo!!!!!!</h2>
 <mat-dialog-content class="mat-typography,gameover">
-  <p>Has conseguido {{this.currentBulbs}} farolillos!!!!! </p>
+  <p>Has conseguido {{this.currentScore}} farolillos!!!!! </p>
   <p>Ahora mejor vete para casa con Los Cantores y Tussam, ya te diremos tu posición final en el ranking y si te llevas el premio para gastartelos mañana en el rebujito casero!</p>
   <img src = "/assets/images/cantores-tussam.jpg" style="width:100%;">
 </mat-dialog-content>
