Translation to English

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -89,7 +89,7 @@
 }
 
 .logo-titulo span {
-  font-family: 'Allura';  
+  font-family: 'Architects Daughter';
   font-size: 3.5em;
   padding-left: 0%;
 }
